--- a/package.json
+++ b/package.json
@@ -10,10 +10,19 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.9.2",
     "next": "13.1.6",
+    "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
