--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "13.1.6",
     "next-connect": "^0.13.0",
     "react": "18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
