--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "eslint-config-next": "13.1.6",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.2",
-    "next": "13.1.6",
+    "next": "^13.1.6",
     "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-date-range": "^1.4.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swiper": "^9.0.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
