--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/font": "13.1.6",
+    "aos": "^2.3.4",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.29.3",
     "eslint": "8.34.0",
