--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/font": "13.1.6",
+    "@reduxjs/toolkit": "^1.9.3",
     "aos": "^2.3.4",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.29.3",
@@ -25,6 +26,7 @@
     "react": "18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
     "swiper": "^9.0.5",
     "uuid": "^9.0.0"
   },
