--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^2.29.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.2",
     "next": "^13.2.3",
@@ -27,6 +28,7 @@
     "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0",
     "swiper": "^9.0.5",
     "uuid": "^9.0.0"
   },
